Fix blur effect on mobile phones

--- a/style.css
+++ b/style.css
@@ -251,6 +251,8 @@ nav a:hover {
     width: 100%;
     background-color: #3c3836;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    background-color: rgba(60,56,54,0.7);
   }
 
   nav ul.show li {
